# codanim

./: CMakeLists.txt  LICENSE  README.md
hmorphdyn/: CMakeLists.txt  absplot.cpp  activations.hpp  color.hpp  complex.hpp  configvars.hpp  cxcplot.cpp  main.cpp  math.hpp  typedefs.h  typedefs.hpp
mazesolver/: CMakeLists.txt  MazeSolver.md  main.cpp
misc/: stack.hpp
